--- a/app/views/public/group_tasks/edit.html.erb
+++ b/app/views/public/group_tasks/edit.html.erb
@@ -15,9 +15,9 @@
         <%= f.label :end_time, "タスク終了日" %><br>
         <%= f.date_field :end_time, :value => @group_task.end_time, class: "form-control" %><br>
         <%= f.label :assigned_person, "アサイン" %><br>
-        <%= f.select :assigned_person, options_from_collection_for_select(@group_task.group.users.all, :id, :name), {include_blank: "選択"}, { class: "col-12 text-center"} %><br>
+        <%= f.select :assigned_person, options_from_collection_for_select(@group_task.group.users.all, :id, :name), {include_blank: @user.name}, { class: "col-12 text-center"} %><br>
         <%= f.label :tag_id, "タグ選択", class: "mt-3" %><br>
-        <%= f.select :tag_id, options_from_collection_for_select(@group.tags.all, :id, :name), {include_blank: "選択"}, { class: "col-12 text-center"} %><br>
+        <%= f.select :tag_id, options_from_collection_for_select(@group.tags.all, :id, :name), {include_blank: @group_task.tag.name}, { class: "col-12 text-center"} %><br>
         <%= f.hidden_field :group_id, :value => @group_task.group_id %>
       </div>
     </div>
