--- a/app/views/public/tasks/edit.html.erb
+++ b/app/views/public/tasks/edit.html.erb
@@ -11,11 +11,11 @@
       <div class="col-4 mx-auto text-center">
         <%= f.hidden_field :assigned_person, :value => current_user.id %>
         <%= f.label :start_time, "タスク開始日" %><br>
-        <%= f.date_field :start_time, :value => Time.now.strftime("%Y-%m-%d"), class: "form-control" %><br>
+        <%= f.date_field :start_time, class: "form-control" %><br>
         <%= f.label :end_time, "タスク終了日" %><br>
-        <%= f.date_field :end_time, :value => Time.now.strftime("%Y-%m-%d"), class: "form-control" %><br>
+        <%= f.date_field :end_time, class: "form-control" %><br>
         <%= f.label :tag_id, "タグ選択" %>
-        <%= f.select :tag_id, options_from_collection_for_select(@tags, :id, :name), {include_blank: "選択"}, { class: "col-12 text-center"} %><br>
+        <%= f.select :tag_id, options_from_collection_for_select(@tags, :id, :name), {include_blank: @task.tag.name}, { class: "col-12 text-center"} %><br>
       </div>
     </div>
     <div class="row mb-3">
