--- a/app/views/layouts/_admin.html.erb
+++ b/app/views/layouts/_admin.html.erb
@@ -8,6 +8,9 @@
       <ul class="navbar-nav ml-auto">
         <% if admin_signed_in? %>
           <li class="nav-item ml-3">
+            <%= link_to "ユーザー一覧", admin_users_path, class: 'nav-link text-dark' %>
+          </li>
+          <li class="nav-item ml-3">
             <%= link_to "ログアウト", destroy_admin_session_path, class: 'nav-link text-dark' %>
           </li>
         <% end %>
