--- a/app/views/admin/users/show.html.erb
+++ b/app/views/admin/users/show.html.erb
@@ -7,6 +7,7 @@
     <%= f.label :status, "有効", :value => false %>
     <%= f.radio_button :status, true %>
     <%= f.label :status, "退会", :value => true %><br>
-    <%= f.submit "変更を保存する", class: "btn btn-outline-secondary" %>
+    <%= f.submit "変更を保存する", class: "btn btn-outline-secondary mt-3" %>
   <% end %>
+  <%= link_to 'ユーザー一覧に戻る', admin_users_path, class: "btn btn-outline-secondary mt-4" %>
 </div>
