--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -1,4 +1,5 @@
 @import '~bootstrap/scss/bootstrap';
+@import '~@fortawesome/fontawesome-free/scss/fontawesome';
 
 body {
   position: relative;
@@ -77,4 +78,14 @@ body {
 
 .title h2 {
   font-size: 35px;
+}
+
+.nav-item {
+  position: relative;
+}
+
+#mark {
+  position: absolute;
+  top: 0;
+  left: 0;
 }
