--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -18,6 +18,9 @@
           </li>
           <li class="nav-item ml-3">
             <%= link_to "通知", notifications_path, class: 'nav-link text-dark' %>
+            <% if unchecked_notifications.any? %>
+              <i class="fa fa-circle" id="mark" style="color: gold;"></i>
+            <% end %>
           </li>
           <li class="nav-item ml-3">
             <%= link_to "ログアウト", destroy_user_session_path, class: 'nav-link text-dark' %>
